--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 services:
   engecopi:
     image: tomcat:8
-    container_name: eng_atacado
+    container_name: eng_separacao
     ports:
       - "8086:8080"
     environment:
@@ -13,10 +13,10 @@ services:
       - ./ebean.properties:/etc/ebean.properties
     restart: always
     networks:
-      rede_atacado:
+      rede_separacao:
         ipv4_address: 172.38.1.1
 networks:
-  rede_atacado:
+  rede_separacao:
     ipam:
       driver: default
       config:
