--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,20 +4,20 @@ services:
     image: tomcat:8
     container_name: eng_separacao
     ports:
-      - "8086:8080"
+      - "8028:8080"
     environment:
       TZ: "America/Fortaleza"
       EBEAN_PROPS: /etc/ebean.properties
     volumes:
-      - ./build/libs/separacaoRessuprimento-1.0.war:/usr/local/tomcat/webapps/separacaoRessuprimento.war
+      - ./build/libs/producao-1.0.war:/usr/local/tomcat/webapps/separacaoRessuprimento.war
       - ./ebean.properties:/etc/ebean.properties
     restart: always
     networks:
       rede_separacao:
-        ipv4_address: 172.38.1.1
+        ipv4_address: 172.138.1.1
 networks:
   rede_separacao:
     ipam:
       driver: default
       config:
-        - subnet: 172.38.0.0/16
+        - subnet: 172.138.0.0/16
